--- a/package.json
+++ b/package.json
@@ -1,22 +1,25 @@
 {
   "name": "auto-api-ts",
-  "version": "1.0.0",
+  "version": "1.0.1",
+  "author": "shewulong",
+  "license": "MIT",
   "description": "",
   "main": "dist/index.js",
   "module": "src/index.ts",
   "types": "src/index.d.ts",
   "type": "commonjs",
+  "bin": {
+    "auto-api-ts": "bin/auto-api-ts.js"
+  },
   "scripts": {
     "build": "tsc",
-    "preview": "rm -rf dist && tsc && node dist/index.js"
+    "preview": "tsc && node dist/index.js"
   },
   "files": [
     "dist",
     "src"
   ],
   "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "@types/fs-extra": "^11.0.1",
     "axios": "^1.4.0",
@@ -27,6 +30,10 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/node": "^20.3.1"
+  },
+  "repository": "https://github.com/wulongshe/auto-api-ts.git",
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org"
   },
   "engines": {
     "node": ">=14.20.0"
