--- a/.env.template
+++ b/.env.template
@@ -6,5 +6,5 @@ API_VERSION="xxx"
 COOKIE="xxx"
 # 生成的文件夹
 TYPE_PATH="./types"
-# 请求方式 request | axios，默认axios
-REQUEST_METHOD="request"
+# 请求方式 axios | request，默认axios
+REQUEST_METHOD="axios"
