refactor: 重构&js调用

--- a/.env.template
+++ b/.env.template
@@ -1,10 +1,10 @@
 # swagger地址
-BASE_URL="xxx"
+BASE_URL="https://api.xxx.dev"
 # swagger版本
-API_VERSION="xxx"
+API_VERSION="/api/v1/xxx/api-docs"
 # swagger请求头
 COOKIE="xxx"
-# 生成的文件夹
-TYPE_PATH="./types"
-# 请求方式 axios | request，默认axios
-REQUEST_METHOD="axios"
+# 生成的文件夹路径
+OUTPUT="./apis"
+# 请求方法的导入路径
+IMPORT="@/request"
