--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "auto-api-ts",
-  "version": "1.0.12",
+  "version": "1.1.0",
   "author": "shewulong",
   "license": "MIT",
   "description": "",
@@ -13,13 +13,18 @@
   },
   "scripts": {
     "build": "tsc",
+    "test": "vitest run",
     "pub": "tsc && pnpm publish"
   },
   "files": [
     "dist",
     "src"
   ],
-  "keywords": ["swagger", "api", "typescript"],
+  "keywords": [
+    "swagger",
+    "api",
+    "typescript"
+  ],
   "dependencies": {
     "axios": "^1.4.0",
     "dotenv": "^16.3.1",
@@ -27,9 +32,9 @@
     "typescript": "^5.1.3"
   },
   "devDependencies": {
-    "@types/axios": "^0.14.0",
     "@types/fs-extra": "^11.0.1",
-    "@types/node": "^20.3.1"
+    "@types/node": "^20.3.1",
+    "vitest": "^0.32.2"
   },
   "repository": "https://github.com/wulongshe/auto-api-ts.git",
   "publishConfig": {
