--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "auto-api-ts",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "author": "shewulong",
   "license": "MIT",
   "description": "",
   "main": "dist/index.js",
   "module": "src/index.ts",
-  "types": "src/index.d.ts",
+  "types": "dist/index.d.ts",
   "type": "commonjs",
   "bin": {
     "auto-api-ts": "bin/auto-api-ts.js"
