--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,6 @@
 # swagger地址
 BASE_URL="https://api.xxx.dev"
-# swagger版本
+# swagger版本（可选）
 API_VERSION="/api/v1/xxx/api-docs"
 # swagger请求头
 COOKIE="xxx"
