--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "auto-api-ts",
-  "version": "1.1.11",
+  "version": "1.1.12",
   "author": "shewulong",
   "license": "MIT",
   "description": "",
@@ -28,12 +28,12 @@
   "dependencies": {
     "axios": "^1.4.0",
     "dotenv": "^16.3.1",
-    "fs-extra": "^11.1.1",
-    "typescript": "^5.1.3"
+    "fs-extra": "^11.1.1"
   },
   "devDependencies": {
     "@types/fs-extra": "^11.0.1",
     "@types/node": "^20.3.1",
+    "typescript": "^5.1.6",
     "vitest": "^0.32.2"
   },
   "repository": "https://github.com/wulongshe/auto-api-ts.git",
