--- a/package.json
+++ b/package.json
@@ -1,20 +1,18 @@
 {
   "name": "auto-api-ts",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "author": "shewulong",
   "license": "MIT",
   "description": "",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
-  "type":"commonjs",
   "bin": {
     "auto-api-ts": "bin/auto-api-ts.js"
   },
   "scripts": {
-    "build": "rimraf dist && tsup src/index.ts --dts --format cjs,esm --minify --clean",
-    "test": "vitest run",
-    "pub": "tsc && pnpm publish"
+    "build": "tsup src/index.ts --dts --format cjs,esm --minify --clean",
+    "test": "vitest run"
   },
   "files": [
     "bin",
@@ -33,7 +31,6 @@
   "devDependencies": {
     "@types/fs-extra": "^11.0.1",
     "@types/node": "^20.3.1",
-    "rimraf": "^5.0.1",
     "tsup": "^7.2.0",
     "typescript": "^5.1.6",
     "vitest": "^0.32.2"
